   * Added wmi_pager object to control how wml menu items are displayed in context menus, and allow
     to display more than seven.
   * Fix an inefficient implementation of unit::invisible, in an effort to address slow performance problems:
     http://forums.wesnoth.org/viewtopic.php?f=4&t=12139&start=180#p569931
     (Also see gfgtdf's commits trying to optimize the minimap loop)

Version 1.11.11:
 * Add-ons server:
   * Filenames with whitespace in them are no longer allowed.
 * AI:
   * Non-default multiplayer and Micro AIs:
     * Fixed bugs which could lead to the AIs being disabled for the rest of the
       turn if WML events removed or changed units during the AI turn
     * Improved error reporting of invalid AI actions
 * Campaigns:
   * Eastern Invasion:
     * Updated maps for scenarios 12, 14, 16 and 17a.
     * Fixed a bug in 'Captured' which can cause the beginning to make no
       sense.
   * Under the Burning Suns:
     * Fixed broken Divine Incarnation unit type in The Final Confrontation.
 * Language and i18n:
   * Updated translations: German, Italian, Slovak
 * WML engine:
   * Bug #21643: Removing fog from a single hex no longer makes the hex ugly.
   * WML files whose names contain whitespace trigger preprocessor errors.
   * Bug #21722: Event handlers with multiple names never fired.
 * User interface:
   * Corrected most of the issues left with the new default theme.
     * Reintroduced the alignment, race and side being shown in the sidebar.
     * Adjusted the theme to the size and shape of the new minimap frame images.
     * Certain changes to the used text colors, sizes and alignment.
   * Non-team labels no longer remove team labels that were present in the
     same hex.
   * New colors for the Light Red and Dark Red minimap markers.
   * Bug #21724: 'none' is now a special case for [unit_type] ellipse
 * Miscellaneous and bug fixes:
   * Units can no longer be moved in linger mode (bug #21450).